# llama.cpp

./: .gitattributes  .gitignore  CLAUDE.md  LLAMA_VSCODE_FIX.md  LLAMA_VSCODE_STATUS.md  LLAMA_VSCODE_TEST_GUIDE.md  MERGE_SUMMARY.md  OPTIMIZED-SERVERS.md  README.md  SETTINGS_UPDATE_TEST.md  VSCODE_EXTENSION_TROUBLESHOOTING.md  convert_hf_to_gguf.py  settings_backup.json  simple_token_speed_test_no_rotorquant.md  simple_token_speed_test_with_rotorquant.md  start-llama-services.sh  start-llama-vscode-services.sh  start-optimized-servers.sh  validate-setup.sh
.github/workflows/: release.yml  ui-ci.yml
ci/: run.sh
common/: arg.cpp  common.cpp  ngram-map.cpp
conversion/: base.py
ggml/include/: ggml.h
ggml/src/: ggml-quants.c  ggml-quants.h  ggml.c
src/: llama-graph.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid.cpp  llama-memory-recurrent.cpp  llama-memory-recurrent.h
src/models/: delta-net-base.cpp  models.h
tests/: CMakeLists.txt  test-backend-ops.cpp
tools/cli/: README.md
tools/completion/: README.md
tools/mtmd/: clip.cpp  clip.h  mtmd.cpp
tools/server/: CMakeLists.txt  README.md  server-models.cpp  server.cpp
tools/ui/: eslint.config.js
tools/ui/scripts/: dev.sh  install-git-hooks.sh
tools/ui/src/lib/constants/: mcp.ts  settings-keys.ts  settings-registry.ts  supported-file-types.ts
tools/ui/src/lib/enums/: index.ts
tools/ui/src/lib/hooks/: use-models-selector.svelte.ts
tools/ui/src/lib/services/: chat.service.ts  mcp.service.ts  migration.service.ts
tools/ui/src/lib/stores/: mcp.svelte.ts  (+3 more)
tools/ui/src/routes/: +layout.svelte
(+10 files in other folders)
